...
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/email_address_header"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_layout_background"
                                android:ems="10"
                                android:focusable="auto"
                                android:fontFamily="@font/roboto_regular"
...

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_layout_background"
                                    android:ems="10"
                                    android:focusable="auto"
                                    android:fontFamily="@font/roboto_regular"
...
                                android:layout_weight="1"
                                android:textColor="@color/error_message" />
                        </LinearLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_rounded"
                        android:enabled="true"
                        android:fontFamily="@font/font_roboto"
...
