<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false">

    <data>
        <variable
            name="viewModel"
            type="com.example.abc_jobs_alpaca.viewmodel.TechnicalInfoCreateViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@android:style/Widget.ScrollView"
            android:scrollbarStyle="insideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:context=".MainActivity">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutTechnicalItem"
                        style="@style/TransparentBoxStroke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/labelTechnicalItem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/technical_info_label"
                                android:textColor="@color/black" />

                            <Spinner
                                android:id="@+id/spinnerTechnicalItem"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:hint="@string/technical_info_placeholder" />

                            <TextView
                                android:id="@+id/labelTechnicalItemError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/error_message" />
                        </LinearLayout>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutRating"
                        style="@style/TransparentBoxStroke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTechnicalItem">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/labelRating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/level_technical_knowledge_label"
                                android:textColor="@color/black" />

                            <RatingBar
                                android:id="@+id/ratingBar"
                                android:layout_width="148dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/labelRatingError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/error_message" />
                        </LinearLayout>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutDescriptionInfo"
                        style="@style/TransparentBoxStroke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRating">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/labelDescriptionInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/extra_info_technical_label"
                                android:textColor="@color/black" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextDescriptionInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:background="@drawable/rounded_layout_background"
                                android:ems="10"
                                android:focusable="auto"
                                android:fontFamily="@font/roboto_regular"
                                android:gravity="top"
                                android:hint="@string/extra_info_tecnical_placeholder"
                                android:inputType="textMultiLine"
                                android:minLines="3" />

                            <TextView
                                android:id="@+id/labelDescriptionInfoError"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/error_message" />
                        </LinearLayout>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescriptionInfo">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/technicalInfoCancelButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_layout_background"
                            android:text="@string/cancel_preferences_button"
                            android:textColor="@color/accent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.58"
                            app:layout_constraintStart_toEndOf="@+id/tecnicalInfoSaveButton" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/technicalInfoSaveButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/button_rounded_black"
                            android:fontFamily="@font/font_roboto"
                            android:text="@string/save_preferences_button"
                            android:textColor="@color/white"
                            app:backgroundTint="@null"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>